# ha-weathersense

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: hassfest.yaml  release.yaml  tests.yaml  validate.yaml
custom_components/ha-weathersense/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  weather_calculator.py
custom_components/weathersense/: __init__.py  comfort_translations.py  config_flow.py  const.py  manifest.json  sensor.py  weather_calculator.py
custom_components/weathersense/translations/: cs.json  de.json  en.json  es.json  hi.json  ru.json  zh-CN.json
tests/: conftest.py  test_comfort_translations.py  test_config_flow.py  test_init.py  test_sensor.py  test_weather_calculator.py
