[project]
name = "ha-weathersense"
version = "1.2.0"
description = "Home Assistant integration for scientifically-accurate feels-like temperature"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "custom_components"]

[tool.coverage.run]
source = ["custom_components/weathersense"]
